<resources>
    <string name="app_name">ohmage</string>
    <string name="server_name">ohmage</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="upload">Upload</string>
    <string name="ok">OK</string>
    <string name="ignore">Ignore</string>
    <string name="submit">Submit</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="wait">Wait</string>
    <string name="retry_now">Retry Now</string>
    <string name="retry_later">Retry Later</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="click_more_info">Click here for more information</string>
    <string name="discard">Discard</string>
    <string name="logout">Logout</string>
    <string name="confirm">Confirm</string>
    <string name="all">All</string>
    <string name="set">Set</string>
    <string name="continue_string">Continue</string>
    <string name="off">Off</string>
    <string name="last_successful_upload">Last upload time</string>
    <string name="upload_now">Upload Now</string>
    <string name="empty_value">-</string>
    <string name="send">Opt-in</string>
    <string name="no">No</string>
    <string name="menu_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="feedback">Feedback</string>
    <string name="triggers">Triggers</string>
    <string name="login_error">Login Error</string>
    <string name="login_auth_error">Unable to authenticate. Please check username and the password.</string>
    <string name="login_account_disabled">This user account has been disabled.</string>
    <string name="login_network_error">Unable to communicate with server. Please try again later.</string>
    <string name="login_server_error">The server returned an unexpected response. Please try again later.</string>
    <string name="login_authenticating">Authenticating with %s servers&#8230;</string>
    <string name="login_download_campaign">Downloading Project&#8230;</string>
    <string name="login_error_downloading_campaign">Error downloading project</string>
    <string name="login_username_title">Username:</string>
    <string name="login_password_title">Password:</string>
    <string name="login_server_title">Server:</string>
    <string name="login_choose_server">Default Servers</string>
    <string name="login_submit">Login</string>
    <string name="login_invalid_server">Please Enter a valid server name</string>
    <string name="login_activity_login_button_description">Login Button</string>
    <string name="login_register_new_account"><a href="#">register an account</a></string>
    <string name="change_password_submit">Change Password</string>
    <string name="change_password_description">change password button</string>
    <string name="old_password_title">Current Password</string>
    <string name="new_password_title">New Password</string>
    <string name="repeat_password_title">Repeat Password</string>
    <string name="changing_password">Changing Password</string>
    <string name="change_password_invalid_title">Invalid password</string>
    <string name="change_password_requirements"><![CDATA[Your new password must be 8 ~ 16 characters long and contain at least:<br> &bull; one lower case letter<br> &bull; one upper case letter<br> &bull; one number<br> &bull; one special character: <br>, . &lt; &gt; ! @ # $ % ^ &amp; * + - :]]></string>
    <string name="change_password_unsuccessful">Password change required. Please login and change your password.</string>
    <string name="mobility_missing_desc">Please make sure the Mobility package is installed.</string>
    <string name="mobility_market_btn_label">Install Mobility</string>
    <string name="mobility_market_link">market://details?id=org.ohmage.mobility</string>
    <string name="mobiltiy_control_1min">1 min</string>
    <string name="mobility_control_5min">5 min</string>
    <string name="mobility_control_off_description">Off Button</string>
    <string name="mobility_control_1min_description">1 Minute Button</string>
    <string name="mobility_control_5min_description">5 Minutes Button</string>
    <string name="mobility_control_sampling_interval">Sampling interval:</string>
    <string name="mobility_control_recent_mobility_modes_title">Most recent mobility modes (last 20 minutes)</string>
    <string name="mobility_control_no_points">No mobility modes were collected recently.</string>
    <string name="mobility_control_upload_count_title">To upload</string>
    <string name="mobility_control_total_title">Total</string>
    <string name="mobility_upload_error_message">There was an error uploading: %s</string>
    <string name="mobility_network_error_message">Network error occurred while trying upload streams</string>
    <string name="recent_mobility_aggregate_last_week_title">Last Week</string>
    <string name="recent_mobility_aggregate_baseline_title">During Baseline</string>
    <string name="admin_dialog_title">Enter pin code:</string>
    <string name="admin_dialog_invalid_pin">Wrong pin code.</string>
    <string name="filter_all_campaigns">All Projects</string>
    <string name="filter_all_surveys">All Surveys</string>
    <string name="controls_filter_prev_description">Filter Previous Button</string>
    <string name="controls_filter_current_description">Filter Button</string>
    <string name="controls_filter_next_description">Filter Next Button</string>
    <string name="title_campaigns">My Projects</string>
    <string name="title_surveys">Surveys</string>
    <string name="title_response_history">Response History</string>
    <string name="title_upload_queue">Upload Queue</string>
    <string name="title_profile">Profile</string>
    <string name="title_help">Help</string>
    <string name="title_mobility">Mobility</string>
    <string name="title_probes">Streams</string>
    <string name="title_add_campaign">Add Project</string>
    <string name="title_response">Response</string>
    <string name="title_campaign_info">Project Info</string>
    <string name="title_survey_info">Survey Info</string>
    <string name="title_change_password">Change Password</string>
    <string name="change_password_not_same">Passwords are not the same</string>
    <string name="dashboard_campaigns">Projects</string>
    <string name="dashboard_surveys">Surveys</string>
    <string name="dashboard_response_history">Response\nHistory</string>
    <string name="dashboard_upload_queue">Upload\nQueue</string>
    <string name="dashboard_profile">Profile</string>
    <string name="dashboard_help">Help</string>
    <string name="dashboard_mobility">Mobility</string>
    <string name="dashboard_probe">Streams</string>
    <string name="dashboard_campaigns_btn_description">Project List Dashboard Button</string>
    <string name="dashboard_surveys_btn_description">Surveys Dashboard Button</string>
    <string name="dashboard_feedback_btn_description">Response History Dashboard Button</string>
    <string name="dashboard_upload_queue_btn_description">Upload Queue Dashboard Button</string>
    <string name="dashboard_profile_btn_description">Profile Dashboard Button</string>
    <string name="dashboard_mobility_btn_description">Mobility Dashboard Button</string>
    <string name="dashboard_probe_btn_description">Probe Dashboard Button</string>
    <string name="dashboard_help_btn_description">Help Dashboard Button</string>
    <string name="help_goto_dashboard">Dashboard</string>
    <string name="help_goto_filter">Filter</string>
    <string name="help_goto_list">List</string>
    <string name="help_dashboard_header_text">The Dashboard makes it easy to get to projects, surveys, and your response history&lt;br/></string>
    <string name="help_dashboard_section">&lt;h2>&lt;img src=%1$s>%2$s&lt;/h2>&lt;p>%3$s&lt;/p></string>
    <string name="help_dashboard_campaigns_title">Projects</string>
    <string name="help_dashboard_campaigns_text">On the &lt;b>Project List&lt;/b> screen you can see the projects you are participating in (which have already been downloaded to the phone) as well as projects available for participation (which are on the server, available to be downloaded to the phone). You can access information about the projects you are participating in, as well as set up triggered reminders.</string>
    <string name="help_dashboard_surveys_title">Surveys</string>
    <string name="help_dashboard_surveys_text">On the &lt;b>Survey List&lt;/b> screen you can see and take surveys from all the projects you are participating in.</string>
    <string name="upload_queue_upload_all">Upload All</string>
    <string name="upload_button_description">Upload Button</string>
    <string name="preferences_campaign_management">Project Management</string>
    <string name="preferences_single_campaign_mode">Single Project Mode</string>
    <string name="preferences_user_management">User Action Management</string>
    <string name="preferences_show_feedback_summary_off">Show Feedback including the Response History</string>
    <string name="preferences_show_feedback_summary_on">Hide Feedback including the Response History</string>
    <string name="preferences_show_feedback_title">Show Feedback</string>
    <string name="preferences_show_profile_summary_off">Show Profile on Dashboard</string>
    <string name="preferences_show_profile_summary_on">Hide Profile from Dashboard</string>
    <string name="preferences_show_profile_title">Show Profile</string>
    <string name="preferences_show_upload_queue_summary_off">Show Upload Queue on Dashboard</string>
    <string name="preferences_show_upload_queue_summary_on">Hide Upload Queue from Dashboard</string>
    <string name="preferences_show_upload_queue_title">Show Upload Queue</string>
    <string name="preferences_show_mobility_summary_off">Show Mobility on Dashboard</string>
    <string name="preferences_show_mobility_summary_on">Hide Mobility from Dashboard</string>
    <string name="preferences_show_mobility_title">Show Mobility</string>
    <string name="preferences_show_mobility_feedback_summary_off">Show Mobility Feedback</string>
    <string name="preferences_show_mobility_feedback_summary_on">Hide Mobility Feedback</string>
    <string name="preferences_show_mobility_feedback_title">Show Mobility Feedback</string>
    <string name="preferences_account_management">Account Management</string>
    <string name="preferences_update_password_title">Sync Password</string>
    <string name="preferences_update_password_summary">Sync your password if you changed it on the server</string>
    <string name="preferences_logout_title">Logout and Wipe</string>
    <string name="preferences_logout_summary">Logging out will remove all data from the phone including any data that has not been uploaded</string>
    <string name="preferences_feedback">Feedback</string>
	<string name="preferences_baseline_starttime_title">Baseline Start Date</string>
    <string name="preferences_baseline_endtime_title">Baseline End Date</string>
    <string name="preferences_baseline_clear_title">Clear Baseline</string>
    <string name="preferences_debugging">Debugging</string>
    <string name="preferences_querytest_title">Test Queries (DEBUG)</string>
    <string name="preferences_querytest_summary">Run queries against the content provider and view the results</string>
    <string name="preferences_reset_title">Reset Preferences</string>
    <string name="preferences_reset_summary">Sets preferences back to the default values</string>
    <string name="survey_activity_previous_description">Survey Previous Button</string>
    <string name="survey_activity_skip_description">Survey Skip Button</string>
    <string name="survey_activity_next_description">Survey Next Button</string>
</resources>