<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceScreen android:title="@string/preferences_campaign_management">

		<intent
			android:action="android.intent.action.VIEW"
			android:data="content://org.ohmage.db/campaigns" />
	</PreferenceScreen>

	<CheckBoxPreference
		android:key="key_single_campaign_mode"
		android:title="@string/preferences_single_campaign_mode" />

	<PreferenceCategory android:title="@string/preferences_user_management">

		<CheckBoxPreference
			android:key="key_show_feedback"
			android:summaryOff="@string/preferences_show_feedback_summary_off"
			android:summaryOn="@string/preferences_show_feedback_summary_on"
			android:title="@string/preferences_show_feedback_title" />

		<CheckBoxPreference
			android:key="key_show_profile"
			android:summaryOff="@string/preferences_show_profile_summary_off"
			android:summaryOn="@string/preferences_show_profile_summary_on"
			android:title="@string/preferences_show_profile_title" />

		<CheckBoxPreference
			android:key="key_show_upload_queue"
			android:summaryOff="@string/preferences_show_upload_queue_summary_off"
			android:summaryOn="@string/preferences_show_upload_queue_summary_on"
			android:title="@string/preferences_show_upload_queue_title" />

		<CheckBoxPreference
			android:key="key_show_mobility"
			android:summaryOff="@string/preferences_show_mobility_summary_off"
			android:summaryOn="@string/preferences_show_mobility_summary_on"
			android:title="@string/preferences_show_mobility_title" />
		
		<CheckBoxPreference
			android:key="key_show_mobility_feedback"
			android:summaryOff="@string/preferences_show_mobility_feedback_summary_off"
			android:summaryOn="@string/preferences_show_mobility_feedback_summary_on"
			android:title="@string/preferences_show_mobility_feedback_title"
			android:dependency="key_show_mobility" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_account_management">

		<PreferenceScreen
			android:key="key_update_password"
			android:persistent="false"
			android:summary="@string/preferences_update_password_summary"
			android:title="@string/preferences_update_password_title" />

		<PreferenceScreen
			android:key="key_logout"
			android:persistent="false"
			android:summary="@string/preferences_logout_summary"
			android:title="@string/preferences_logout_title" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_feedback">

	    <org.ohmage.widget.DatePreference
			android:key="key_baseline_start_time"
			android:title="@string/preferences_baseline_starttime_title" />

		<org.ohmage.widget.DatePreference
			android:key="key_baseline_end_time"
			android:title="@string/preferences_baseline_endtime_title" />

		<Preference
			android:key="key_baseline_clear"
			android:title="@string/preferences_baseline_clear_title" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_debugging">
		<PreferenceScreen
			android:key="key_querytest"
			android:persistent="false"
			android:summary="@string/preferences_querytest_summary"
			android:title="@string/preferences_querytest_title" />
	</PreferenceCategory>

	<PreferenceScreen
		android:key="key_reset_preferences"
		android:persistent="false"
		android:summary="@string/preferences_reset_summary"
		android:title="@string/preferences_reset_title" />

</PreferenceScreen>