<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/survey_activity_header" />

    <FrameLayout
        android:id="@+id/prompt_frame"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#888888"
        android:paddingTop="@dimen/halfgutter" >

        <Button
            android:id="@+id/prev_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@android:drawable/btn_default"
            android:contentDescription="@string/survey_activity_previous_description"
            android:text="@string/previous" />

        <Button
            android:id="@+id/skip_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@android:drawable/btn_default"
            android:contentDescription="@string/survey_activity_skip_description"
            android:text="@string/skip" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@android:drawable/btn_default"
            android:contentDescription="@string/survey_activity_next_description"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>