<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_fabric" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/login_form"
                style="@style/SignupForm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/gutter"
                android:paddingTop="@dimen/gutter" >

                <TextView
                    style="@style/SignupLabel"
                    android:text="@string/old_password_title" />

                <EditText
                    android:id="@+id/old_password"
                    style="@style/SignupEdit"
                    android:inputType="textPassword"
                    android:contentDescription="old password field" />

                <TextView
                    style="@style/SignupLabel"
                    android:text="@string/new_password_title" />

                <EditText
                    android:id="@+id/new_password1"
                    style="@style/SignupEdit"
                    android:inputType="textPassword"
                    android:password="true"
                    android:singleLine="true"
                    android:contentDescription="password field one" />
                
                <TextView
                    style="@style/SignupLabel"
                    android:text="@string/repeat_password_title" />

                <EditText
                    android:id="@+id/new_password2"
                    style="@style/SignupEdit"
                    android:inputType="textPassword"
                    android:password="true"
                    android:singleLine="true"
                    android:contentDescription="password field two" />

            </LinearLayout>

            <Button
                android:id="@+id/change_password"
                style="@style/Button.Submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_form"
                android:layout_marginLeft="@dimen/gutter"
                android:layout_marginRight="@dimen/gutter"
                android:contentDescription="@string/change_password_description"
                android:text="@string/change_password_submit" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>