<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/upload_all_container"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/upload_all_container_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/entity_header_background"
        android:visibility="invisible" >

        <Button
            android:id="@+id/upload_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/entity_action_button"
            android:contentDescription="@string/upload_button_description"
            android:text="@string/upload_queue_upload_all" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/probe_counts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/upload_all_container"
        android:orientation="horizontal"
        android:padding="@dimen/gutter" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#e8e8e8"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/mobility_control_upload_count_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/darkgray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="#89b8db" />

            <TextView
                android:id="@+id/mobility_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/prompt_response_item_bg" />
        </LinearLayout>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#e8e8e8"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/last_successful_upload"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/darkgray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="#89b8db" />

            <TextView
                android:id="@+id/last_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/prompt_response_item_bg" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/upload_queue_response_list_fragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/probe_counts" />

</RelativeLayout>